--- a/UI/Resources/TabControlStyles.xaml
+++ b/UI/Resources/TabControlStyles.xaml
@@ -14,12 +14,14 @@
                         <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" VerticalScrollBarVisibility="Auto" FlowDirection="RightToLeft">
                             <TabPanel x:Name="HeaderPanel" Panel.ZIndex ="0" KeyboardNavigation.TabIndex="1" IsItemsHost="true"/>
                         </ScrollViewer>
-                        <ContentPresenter x:Name="PART_SelectedContentHost"
-                                          VerticalAlignment="Stretch"
-                                          HorizontalAlignment="Stretch"
-                                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
-                                          ContentSource="SelectedContent"
-                                          Grid.Column="1"/>
+                        <Border Grid.Column="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+                            <ContentPresenter x:Name="PART_SelectedContentHost"
+                                  VerticalAlignment="Stretch"
+                                  HorizontalAlignment="Stretch"
+                                  SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                                  ContentSource="SelectedContent"/>
+                        </Border>
+                        
                     </Grid>
                     <ControlTemplate.Resources>
                         <Style TargetType="{x:Type ScrollBar}">
