--- a/UI/ViewElements/BitsFieldIndicatorViewElement.xaml
+++ b/UI/ViewElements/BitsFieldIndicatorViewElement.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="xLib.UI.ViewElements.BitsFieldViewElement"
+﻿<UserControl x:Class="xLib.UI.ViewElements.BitsFieldIndicatorViewElement"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -10,9 +10,9 @@
         <ItemsControl ItemsSource="{Binding Field}">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <Button Content="{Binding StateName}" Command="{Binding ClickCommand}" Height="25" Margin="0,3,0,0">
-                        <Button.Style>
-                            <Style TargetType="Button" BasedOn='{StaticResource ButtonStyle1}'>
+                    <Label Content="{Binding StateName}" Height="25" Margin="0,3,0,0" Padding="1,0,0,0">
+                        <Label.Style>
+                            <Style TargetType="Label" BasedOn='{StaticResource LabelGlobalStyle}'>
                                 <Style.Triggers>
                                     <DataTrigger Binding="{Binding FlagIsEnabled}" Value="True">
                                         <Setter Property="Background" Value="#FF641818"/>
@@ -22,8 +22,8 @@
                                     </DataTrigger>
                                 </Style.Triggers>
                             </Style>
-                        </Button.Style>
-                    </Button>
+                        </Label.Style>
+                    </Label>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
