--- a/UI/Views/UniversalListView.xaml
+++ b/UI/Views/UniversalListView.xaml
@@ -66,7 +66,7 @@
 
         </Grid>
 
-        <ItemsControl ItemsSource="{Binding Commands}" Grid.Column="1">
+        <ItemsControl ItemsSource="{Binding Commands}" Grid.Column="1" Margin="5,5,0,0">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
                     <Button Content="{Binding Name}"
