--- a/UI/Views/UniversalListView.xaml
+++ b/UI/Views/UniversalListView.xaml
@@ -5,13 +5,15 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:templateSelectors="clr-namespace:xLibV100.UI"
              xmlns:local="clr-namespace:xLibV100.UI"
+             xmlns:ValueConverters="clr-namespace:xLibV100.UI.ValueConverters"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" MaxHeight="1800">
+             d:DesignHeight="450" d:DesignWidth="800" MaxHeight="1600">
     <UserControl.Resources>
         <Style TargetType="{x:Type Button}" x:Name="ButtonStyle" BasedOn="{StaticResource ButtonStyle1}">
             <Setter Property="Margin" Value="5,5,5,0"/>
             <Setter Property="MinWidth" Value="200"/>
         </Style>
+        <ValueConverters:PropertyCheckConverter x:Key="PropertyCheckConverter"/>
     </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -70,9 +72,10 @@
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
                     <Button Content="{Binding Name}"
-                    Command="{Binding }"
-                    Style="{StaticResource ButtonStyle1}"
-                    MinWidth="200" Margin="0,0,0,5"/>
+                            Command="{Binding }"
+                            MinWidth="200"
+                            Margin="{Binding [0], TargetNullValue='0,0,0,5', FallbackValue='0,0,0,5'}">
+                    </Button>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
