--- a/Windows/DialogWindowPresenter.xaml
+++ b/Windows/DialogWindowPresenter.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="DialogWindowPresenter" Height="auto" Width="auto" MinHeight="200" Style="{StaticResource WindowGlobalStyle}" SizeToContent="WidthAndHeight">
+        Title="{Binding Name}" Height="auto" Width="auto" MinHeight="200" Style="{StaticResource WindowGlobalStyle}" SizeToContent="WidthAndHeight">
     <Grid>
         <Grid>
             <Grid.RowDefinitions>
