--- a/Windows/WindowViewPresenter.xaml
+++ b/Windows/WindowViewPresenter.xaml
@@ -5,11 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:xLibV100.Windows"
         mc:Ignorable="d"
-        Title="WindowViewPresenter"
+        Title="{Binding Name}"
         Style="{StaticResource WindowGlobalStyle}"
         HorizontalContentAlignment="Stretch"
         VerticalContentAlignment="Stretch"
         MaxHeight="{x:Static SystemParameters.PrimaryScreenHeight}"
+        MinHeight="400"
         SizeToContent="WidthAndHeight">
     <Grid Margin="5,5,5,5" x:Name="Container">
         
